Fix canvas size on mobile

--- a/assets/index.css
+++ b/assets/index.css
@@ -33,7 +33,7 @@ button {
 
 #canvas {
     width: 100%;
-    height: 100%;
+    height: 512px;
 }
 
 button:hover {
@@ -73,7 +73,7 @@ button:hover {
     padding: 0 10px 0 10px;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
     .left, .right {
         width: 100%;
     }
